k8s/gestor-risco-namespace.yaml
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: ns-gestor-risco
  labels:
    app.kubernetes.io/name: gestor-risco
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: kubectl
